--- a/Dwellings - Population - Catchment areas/0.2 Pre-processing  - Subset selection.ipynb
+++ b/Dwellings - Population - Catchment areas/0.2 Pre-processing  - Subset selection.ipynb
@@ -11,7 +11,9 @@
     "# GeoPackage : Subset preparation (on a single commune) from main GeoPackage\n",
     "# BD_TOPO (Building, roads, administrative limits and activity areas),\n",
     "# Filosofi (population)\n",
-    "# Author : Perez Joan"
+    "# Author : Perez Joan\n",
+    "\n",
+    "# Prerequisites : output from 0.1"
    ]
   },
   {
@@ -26,7 +28,7 @@
     "import pandas\n",
     "import geopandas as gpd\n",
     "\n",
-    "# Set filepaths to gpkg created in section 0.1\n",
+    "# Set filepaths 0.1 output\n",
     "main_gpkg = \"C:\\\\Users\\\\jperez\\\\Documents\\\\Current 1\\\\emc2\\\\Output\\\\WP2_DPC_0.1.gpkg\"\n",
     "\n",
     "# Specify the file path to record the subset\n",
