--- a/Dwellings - Population - Catchment areas/1.3 Dwelling estimation - Evaluate number of dwellings for NA buildings with dwellings.ipynb
+++ b/Dwellings - Population - Catchment areas/1.3 Dwelling estimation - Evaluate number of dwellings for NA buildings with dwellings.ipynb
@@ -36,142 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "ffb38576-eb24-4105-a843-e65353532160",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        cleabs          nature        usage_1 usage_2  \\\n",
-      "0     BATIMENT0000000327499777  Indifférenciée  Indifférencié     NaN   \n",
-      "1     BATIMENT0000002244941402  Indifférenciée  Indifférencié     NaN   \n",
-      "2     BATIMENT0000002244941479  Indifférenciée  Indifférencié     NaN   \n",
-      "3     BATIMENT0000002244941477  Indifférenciée  Indifférencié     NaN   \n",
-      "4     BATIMENT0000000327500848  Indifférenciée  Indifférencié     NaN   \n",
-      "...                        ...             ...            ...     ...   \n",
-      "4010  BATIMENT0000000327500778  Indifférenciée    Résidentiel  Annexe   \n",
-      "4011  BATIMENT0000000327500778  Indifférenciée    Résidentiel  Annexe   \n",
-      "4012  BATIMENT0000000327501677  Indifférenciée    Résidentiel     NaN   \n",
-      "4013  BATIMENT0000000327501679  Indifférenciée  Indifférencié     NaN   \n",
-      "4014  BATIMENT0000000327501506  Indifférenciée    Résidentiel     NaN   \n",
-      "\n",
-      "      construction_legere etat_de_l_objet sources identifiants_sources  \\\n",
-      "0                   False      En service     NaN                  NaN   \n",
-      "1                   False      En service     NaN                  NaN   \n",
-      "2                   False      En service     NaN                  NaN   \n",
-      "3                   False      En service     NaN                  NaN   \n",
-      "4                   False      En service     NaN                  NaN   \n",
-      "...                   ...             ...     ...                  ...   \n",
-      "4010                False      En service     NaN                  NaN   \n",
-      "4011                False      En service     NaN                  NaN   \n",
-      "4012                False      En service     NaN                  NaN   \n",
-      "4013                False      En service     NaN                  NaN   \n",
-      "4014                False      En service     NaN                  NaN   \n",
-      "\n",
-      "     methode_d_acquisition_planimetr  precision_planimetrique  ...  \\\n",
-      "0                    Photogrammétrie                      2.5  ...   \n",
-      "1                    Photogrammétrie                      2.5  ...   \n",
-      "2                    Photogrammétrie                      2.5  ...   \n",
-      "3                    Photogrammétrie                      2.5  ...   \n",
-      "4                    Photogrammétrie                      2.5  ...   \n",
-      "...                              ...                      ...  ...   \n",
-      "4010           BDParcellaire recalée                      3.0  ...   \n",
-      "4011           BDParcellaire recalée                      3.0  ...   \n",
-      "4012           BDParcellaire recalée                      3.0  ...   \n",
-      "4013           BDParcellaire recalée                      3.0  ...   \n",
-      "4014           BDParcellaire recalée                      3.0  ...   \n",
-      "\n",
-      "     altitude_minimale_sol  altitude_minimale_toit  altitude_maximale_toit  \\\n",
-      "0                    218.3                     NaN                     NaN   \n",
-      "1                    208.8                     NaN                     NaN   \n",
-      "2                    224.3                     NaN                     NaN   \n",
-      "3                    206.1                     NaN                     NaN   \n",
-      "4                    104.1                     NaN                     NaN   \n",
-      "...                    ...                     ...                     ...   \n",
-      "4010                 190.1                   198.6                     NaN   \n",
-      "4011                 190.1                   198.6                     NaN   \n",
-      "4012                 265.2                   271.4                     NaN   \n",
-      "4013                 265.2                   271.6                     NaN   \n",
-      "4014                 216.9                   226.1                     NaN   \n",
-      "\n",
-      "      altitude_maximale_sol origine_du_batiment appariement_fichiers_fonciers  \\\n",
-      "0                       NaN   Imagerie aérienne                         A 1.0   \n",
-      "1                       NaN   Imagerie aérienne                           NaN   \n",
-      "2                       NaN   Imagerie aérienne                           NaN   \n",
-      "3                       NaN   Imagerie aérienne                           NaN   \n",
-      "4                       NaN   Imagerie aérienne                           NaN   \n",
-      "...                     ...                 ...                           ...   \n",
-      "4010                    NaN            Cadastre                         A 1.0   \n",
-      "4011                    NaN            Cadastre                         A 1.0   \n",
-      "4012                    NaN            Cadastre                         A 1.0   \n",
-      "4013                    NaN            Cadastre                           NaN   \n",
-      "4014                    NaN            Cadastre                         A 1.0   \n",
-      "\n",
-      "      index_rgt  index_right                 categorie  \\\n",
-      "0           185          NaN                       NaN   \n",
-      "1           185          NaN                       NaN   \n",
-      "2           185          NaN                       NaN   \n",
-      "3           185          NaN                       NaN   \n",
-      "4           185          7.0  Industriel et commercial   \n",
-      "...         ...          ...                       ...   \n",
-      "4010        185          NaN                       NaN   \n",
-      "4011        185          NaN                       NaN   \n",
-      "4012        185          NaN                       NaN   \n",
-      "4013        185          NaN                       NaN   \n",
-      "4014        185          NaN                       NaN   \n",
-      "\n",
-      "                                               geometry  \n",
-      "0     POLYGON Z ((1049998.900 6305519.800 221.600, 1...  \n",
-      "1     POLYGON Z ((1050084.300 6305664.900 212.000, 1...  \n",
-      "2     POLYGON Z ((1050049.100 6305538.600 226.400, 1...  \n",
-      "3     POLYGON Z ((1050070.300 6305641.800 209.000, 1...  \n",
-      "4     POLYGON Z ((1048298.000 6305851.300 106.800, 1...  \n",
-      "...                                                 ...  \n",
-      "4010  POLYGON Z ((1048055.100 6305414.900 198.600, 1...  \n",
-      "4011  POLYGON Z ((1048054.700 6305405.600 198.600, 1...  \n",
-      "4012  POLYGON Z ((1049282.300 6305102.000 271.400, 1...  \n",
-      "4013  POLYGON Z ((1049280.600 6305099.500 271.600, 1...  \n",
-      "4014  POLYGON Z ((1049010.300 6304655.400 226.100, 1...  \n",
-      "\n",
-      "[4015 rows x 27 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jperez\\AppData\\Local\\Temp\\ipykernel_31872\\1514374993.py:4: UserWarning: `keep_geom_type=True` in overlay resulted in 1 dropped geometries of different geometry types than df1 has. Set `keep_geom_type=False` to retain all geometries\n",
-      "  intersection = gpd.overlay(filtered_building, morphology_building_b, how='intersection')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "morphology_building_b = gpd.GeoDataFrame(geometry=morphology_building.buffer(0.5))\n",
-    "\n",
-    "# Perform spatial intersection\n",
-    "intersection = gpd.overlay(filtered_building, morphology_building_b, how='intersection')\n",
-    "\n",
-    "print(intersection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "ec0e52f6-4194-4870-827d-b94887533dfa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000219BD510350>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(grouped)"
+    "from rpy2.ipython import rmagic\n"
    ]
   },
   {
