added test of CSR

--- a/Dwellings - Population - Catchment areas/0.1 Pre-processing  - Main GeoPackage preparation.ipynb
+++ b/Dwellings - Population - Catchment areas/0.1 Pre-processing  - Main GeoPackage preparation.ipynb
@@ -8,10 +8,11 @@
    "outputs": [],
    "source": [
     "# EMC2 WP 2 Processing 0.1\n",
-    "# GeoPackage : Department preparation & subset selection (on a single commune) from main GeoPackage\n",
-    "# BD_TOPO (Building, roads, administrative limits and activity areas),\n",
-    "# Filosofi (population)\n",
+    "# This script creates a main GeoPackage for a single department in France and a subset on a single commune\n",
     "# Author : Perez Joan\n",
+    "# Input data (see below for downloading the data) \n",
+    "# 1. BD_TOPO (Building, roads, administrative limits and activity areas),\n",
+    "# 2. Filosofi (population)\n",
     "\n",
     "# Download : last version of BD_TOPO for a given French department (BD TOPO® décembre 2023 Tous Thèmes par département format GeoPackage projection légale)\n",
     "# Webpage : https://geoservices.ign.fr/bdtopo#telechargementgpkgreg\n",
@@ -39,10 +40,10 @@
     "BD_TOPO = \"C:\\\\Users\\\\jperez\\\\Documents\\\\Current 1\\\\emc2\\\\Raw data\\\\BDTOPO 3-3\\\\1_DONNEES_LIVRAISON_2023-12-00191\\\\BDT_3-3_GPKG_LAMB93_D059-ED2023-12-15\\\\BDT_3-3_GPKG_LAMB93_D059-ED2023-12-15.gpkg\"\n",
     "Filosofi = \"C:\\\\Users\\\\jperez\\\\Documents\\\\Current 1\\\\emc2\\\\Raw data\\\\Filosofi 2019\\\\carreaux_200m_met.shp\"\n",
     "\n",
-    "# Specify the file path to record the main gpkg file\n",
+    "# Specify the file path to record the main GeoPackage file (it doesn't exist yet)\n",
     "main_gpkg = \"C:\\\\Users\\\\jperez\\\\Documents\\\\Current 1\\\\emc2\\\\Output\\\\WP2_DPC_059_0.1.gpkg\"\n",
     "\n",
-    "# Specify the file path to record the subset\n",
+    "# Specify the file path to record the main GeoPackage file (it doesn't exist yet)\n",
     "subset_gpkg = \"C:\\\\Users\\\\jperez\\\\Documents\\\\Current 1\\\\emc2\\\\Output\\\\WP2_DPC_0.1_059_Subset.gpkg\"\n",
     "\n",
     "# Name of the commune for the subset (example : Drap for 06 or Santes for 59)\n",
